---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: ??. ??. ????
  Bugfixes:
    - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 17. 10. 2021
  Features:
    - Construction planner tool now has a hotkey (default Alt + C)
    - Auto-approval mod setting now has a toolbar shortcut and a hotkey (default Shift + Alt + C)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 09. 10. 2021
  Bugfixes:
    - Fixed an issue with copying/blueprinting of ghost circuit connection data
    - Fixed a compatibility issue between this mod and the Creative Mod instant blueprint feature
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 05. 10. 2021
  Bugfixes:
    - Fixed a crash introduced by the previous version
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 04. 10. 2021
  Bugfixes:
    - Hand-placing assemblers, etc. on top of unapproved ghosts will now preserve the ghost recipe, same as vanilla ghosts
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 02. 10. 2021
  Bugfixes:
    - Ghosts from destroyed entities are now ignored by the approval tool (they will be rebuilt without approval)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 01. 10. 2021
  Other:
    - First mod release!